added boilerplate code for game-service and via-log-service
